@@ -1,3 +1,11 @@
+Tue Oct 07 22:43:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBListWindow.cpp:
+	* src/QGaimBListWindow.h:
+	* src/QGaimBuddyList.cpp:
+	* src/QGaimBuddyList.h:
+	  - The Join Chat and Remove Chat now works in the menu.
+
 Tue Oct 07 21:37:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBuddyList.cpp:
